@@ -131,9 +131,11 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2015-2020 Michal Josef Špaček
-     Artistic License
-     BSD 2-Clause License
+    © 2015-2020 Michal Josef Špaček
+
+    Artistic License
+
+    BSD 2-Clause License
 
 VERSION
     0.04
